# yahoo_finance_csv_converter

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  refactoring_plan.md
.github/workflows/: sync_to_huggingface.yaml  unit_tests.yaml
example_data/schwab/: history.csv  positions.csv
gradio_app/: main.py
gradio_app/converter/: __init__.py  firstrade_converter.py  schwab_converter.py
source_convertor/: __init__.py  base_convertor.py  config.py  schwab_convertor.py  utils.py
source_loader/: __init__.py  base_loader.py  schwab_loader.py
src/: __init__.py
src/cli/: __init__.py  main.py
src/converter/: __init__.py  base.py  cathay_sub_brokerage.py  config.py  schwab.py  utils.py
src/web/: __init__.py  main.py
src/web/converters/: __init__.py  cathay_sub_brokerage.py  schwab.py
tests/: test_schwab_converter.py
